DASH-462 Fix status for wrap status items

--- a/client/src/components/WrapStatusPages/WrapStatusPage/components/CommandComponent/CommandComponent.module.scss
+++ b/client/src/components/WrapStatusPages/WrapStatusPage/components/CommandComponent/CommandComponent.module.scss
@@ -6,7 +6,7 @@
   .copyButton {
     cursor: pointer;
     width: 20px;
-    margin-left: 30px;
+    margin-left: auto;
 
     .icon {
       font-size: 20px;
